--- a/02/02.md
+++ b/02/02.md
@@ -12,6 +12,7 @@ In this tutorial, we'll be using:
 - A GitHub/GitLab/BitBucket/Custom Git repository provider account (your choice)
 
 Let's start by installing [kind](https://kind.sigs.k8s.io/). kind requires that the Docker daemon is running on your local machine, so please [install](https://www.docker.com/get-started) it if you don't already have it before moving on.
+*ADD WHAT TO DO IF YOU RECEIVE AN INSTALLATION ERROR: EG; ERROR: failed to create cluster: node(s) already exist for a cluster with the name "kind"
 
 Follow the instructions [here](https://kind.sigs.k8s.io/docs/user/quick-start/#installation) to install kind for your specific operating system.
 
@@ -57,7 +58,7 @@ You should see something similar to:
 CONTAINER ID   IMAGE                  COMMAND                  CREATED          STATUS          PORTS                       NAMES
 ae6ff5184cd6   kindest/node:v1.21.1   "/usr/local/bin/entr…"   17 minutes ago   Up 17 minutes   127.0.0.1:61107->6443/tcp   cluster1-control-plane
 ```
-
+*ADD A BULLET ABOUT WHAT THIS IS DOING BEHIND THE SCENES
 The version is in under the `IMAGE` tag: `1.21.1`.
 
 Next, refer to the following resources for installing kubectl:
